# mail-mcp

./: BUG_GRAPH_ATTACHMENTS.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  docker-compose.yml  open-webui-adapter.dockerfile
.github/workflows/: release.yml
src/: config.rs  errors.rs  ews.rs  graph.rs  imap.rs  main.rs  mime.rs  models.rs  oauth2.rs  server.rs  smtp.rs
