[package]
name = "mail-imap-mcp-rs"
version = "0.1.7"
edition = "2024"
license = "MIT"
description = "Secure IMAP MCP server over stdio with cursor-based pagination, multi-account support, and TLS-only connections"
repository = "https://github.com/bradsjm/mail-imap-mcp-rs"
readme = "README.md"
keywords = ["mcp", "imap", "email", "mail", "protocol"]
categories = ["email", "api-bindings"]

[dependencies]
ammonia = "4.1.2"
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15.7"
futures = "0.3.31"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
mailparse = "0.16.1"
pdf-extract = "0.10.0"
regex = "1.12.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rmcp = { version = "0.16.0", features = ["server", "transport-io", "macros"] }
rustls = "0.23.32"
rustls-pki-types = "1.12.0"
schemars = "1.0.4"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net", "io-std", "time"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
webpki-roots = "1.0.2"
urlencoding = "2.1.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
